syntax = "proto3";

package shmemipc;

option go_package = "./protos";

message ShmemRequestMessage {
  bytes data = 1;
  map<string, string> metadata = 2;
}

message ShmemResponseMessage {
  bytes data = 1;
  int32 status = 2;
  string statusMessage = 3;
}
